--- a/postVenta.html
+++ b/postVenta.html
@@ -1,115 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="automoviles, autos, 0km, usados, coche, L-gante">
-    <meta name="description" content="Somos una agencia dedicada a la compra y venta de automóviles. Buenos precios y una atención post venta inigualable.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="scss/estilos.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  	/>
-    <title>Post Venta-Olimpia Automotores</title>
-  </head>
-  <body>
-    <div class="container-fluid width100">
-      <div id="logo">
-        <img src="imagenes/logosinfondo.png" width="300" class="logo wow animate__animated animate__backInRight">
-      </div>
-        <div class="menu">
-            <nav class="navbar navbar-expand-lg navbar-dark backOlimpia">
-              <a class="navbar-brand" href="#">Olimpia Automotores</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Vehículos
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                              <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                              <a class="dropdown-item" href="vehiculos.html">De colección</a>
-                            </div>
-                        </li> 
-                         <li class="nav-item">
-                            <a class="nav-link" href="postVenta.html">Post-Venta</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-		<head>
-			<h1 class="titulo">El mejor servicio Post-Venta!!!</h1>
-    </head>
-		<div class="row margin">
-            <div class="col-12 col-md-4 texto">
-                <img src="imagenes/mecanico.jpg" width="300" height="200">
-                <div><span class="bold">Mecánica Integral</span>Nos dedicamos a brindar un servicio exclusivo a nuestros clientes, con un compromiso honesto y mucha predisposición. 20 Años de experiencia y nuestro apellido como respaldo. Nuestros clientes también son nuestra familia. Acérquese a nuestras sucursales o llamenos ahora para conocernos.</div>
-            </div>
-            <div class="col-12 col-md-4 texto">
-                <img src="imagenes/pintura.jpg" width="300" height="200">
-                 <div><span class="bold">Cabina de Pintura</span>Le facilitamos la gestión de toda la operatoria para que vender su auto y comprar uno nuevo sea rápido y eficaz. Además lo asesoramos y podemos tomar su vehículo en consignación. En Munafó Automóviles valoramos su tiempo y su confianza, y por eso le aseguramos un buen negocio siempre.</div>
-            </div>
-            <div class="col-12 col-md-4 texto">
-                <img src="imagenes/acarreo.jpg" width="300" height="200">
-                <div><span class="bold">Servicio de Acarreo</span>Nos aseguramos el perfecto estado de nuestros vehículos y proveemos servicios integrales de mecánica preventiva para autos de todas las gamas. Electrónica avanzada, cabina de pintura ISO9001, personal capacitado y toda la tecnología en un sólo lugar. Pedí asesoramiento personalizado.</div>
-            </div>
-        </div>
-        <div class="suscribe">
-            <span class="bold2">Reciba nuestras novedades</span><div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le interesen.</div>
-            <form class="texto">
-                <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail3">
-                    </div>
-                </div>
-                <fieldset class="form-group row">
-                  <legend class="col-form-label col-sm-2 float-sm-left pt-0">NEWSLETTER</legend>
-                  <div class="col-sm-10">
-                    <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Deseo que me envíen las ofertas destacadas.</label>
-                    </div>
-                </fieldset>
-                <div class="form-group row width100">
-                    <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="row g-0 footer">
-            <div class="col-6 col-md-6">
-                <div class="textoWhite texto">
-                    <div>Olimpia Automotores.</div>
-                    <div>Todos los derechos reservados.</div>
-                </div>
-            </div> 
-            <div class="col-6 col-md-6 img">
-                <img src="imagenes/redessinfondo.png" width="150">
-            </div>
-        </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="automoviles, autos, 0km, usados, coche, L-gante">
+  <meta name="description"
+    content="Somos una agencia dedicada a la compra y venta de automóviles. Buenos precios y una atención post venta inigualable.">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="scss/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <title>Post Venta</title>
+</head>
+
+<body>
+  <div class="container-fluid width100">
+    <div id="logo">
+      <a href="index.html"><img src="imagenes/logosinfondo.png" width="300"
+          class="logo wow animate__animated animate__backInRight" /></a>
     </div>
-    <script src="js/wow.min.js"></script>
-    <script>
+    <div class="menu">
+      <nav class="navbar navbar-expand-lg navbar-dark backOlimpia">
+        <a class="navbar-brand" href="#">Olimpia Automotores</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Vehículos
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="vehiculos.html">0 Km</a>
+                <a class="dropdown-item" href="vehiculos.html">Usados</a>
+                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+              </div>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="postVenta.html">Post-Venta</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <head>
+      <h1 class="titulo">El mejor servicio Post-Venta!!!</h1>
+    </head>
+    <div class="row margin">
+      <div class="col-12 col-md-12 col-lg-4 texto">
+        <img src="imagenes/mecanico.jpg" loading="lazy" width="300" height="200">
+        <div><span class="bold">Mecánica Integral</span>Nos dedicamos a brindar un servicio exclusivo a nuestros
+          clientes, con un compromiso honesto y mucha predisposición. 20 Años de experiencia y nuestro apellido como
+          respaldo. Nuestros clientes también son nuestra familia. Acérquese a nuestras sucursales o llamenos ahora para
+          conocernos.</div>
+      </div>
+      <div class="col-12 col-md-12 col-lg-4 texto">
+        <img src="imagenes/pintura.jpg" loading="lazy" width="300" height="200">
+        <div><span class="bold">Cabina de Pintura</span>Le facilitamos la gestión de toda la operatoria para que vender
+          su auto y comprar uno nuevo sea rápido y eficaz. Además lo asesoramos y podemos tomar su vehículo en
+          consignación. En Munafó Automóviles valoramos su tiempo y su confianza, y por eso le aseguramos un buen
+          negocio siempre.</div>
+      </div>
+      <div class="col-12 col-md-12 col-lg-4 texto">
+        <img src="imagenes/acarreo.jpg" loading="lazy" width="300" height="200">
+        <div><span class="bold">Servicio de Acarreo</span>Nos aseguramos el perfecto estado de nuestros vehículos y
+          proveemos servicios integrales de mecánica preventiva para autos de todas las gamas. Electrónica avanzada,
+          cabina de pintura ISO9001, personal capacitado y toda la tecnología en un sólo lugar. Pedí asesoramiento
+          personalizado.</div>
+      </div>
+    </div>
+    <div class="suscribe width100">
+      <span class="bold2">Reciba nuestras novedades</span>
+      <div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le
+        interesen.</div>
+      <form class="texto" method="GET" action="volverinicio.html">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
+        </div>
+        <fieldset class="form-group row">
+          <div class="col-sm-12">
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Deseo recibir ofertas destacadas.</label>
+            </div>
+        </fieldset>
+        <div class="form-group row width100">
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="row g-0 footer">
+      <div class="col-md-5 col-md-5 d-none d-lg-block">
+        <div class="texto">
+          <div>Olimpia Automotores.</div>
+          <div>Todos los derechos reservados.</div>
+        </div>
+      </div>
+      <div class="col-5 col-md-2 row">
+        <a href="https://wa.me/541141669827"><img src="imagenes/wp.png" width="30" height="30" alt="whatsapp"></a>
+        <a href="https://www.facebook.com/OlimpiaAutomotores"><img src="imagenes/fb.png" width="30" height="30"
+            alt="facebook"></a>
+        <a href="https://www.instagram.com/olimpia_automotores/"><img src="imagenes/insta.png" width="30" height="30"
+            alt="instagram"></a>
+      </div>
+      <div class="col-5 col-md-5 d-none d-lg-block">
+        <div class="texto">
+          <div>Dirección: Barrufaldi 2228.</div>
+          <div>Posadas-Misiones.</div>
+          <div>Teléfono: 3764-270342</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="js/wow.min.js"></script>
+  <script>
     new WOW().init();
-    </script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-  </body>
+  </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
