--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -1,81 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="automoviles, autos, 0km, usados, coche, L-gante">
-    <meta name="description" content="Somos una agencia dedicada a la compra y venta de automóviles. Buenos precios y una atención post venta inigualable.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="scss/estilos.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  	/>
-    <title>Quiénes somos-Olimpia Automotores</title>
-  </head>
-  <body>
-    <div class="container-fluid width100">
-      <div id="logo">
-        <img src="imagenes/logosinfondo.png" width="300" class="logo wow animate__animated animate__backInRight">
-      </div>
-        <div class="menu">
-            <nav class="navbar navbar-expand-lg navbar-dark backOlimpia">
-              <a class="navbar-brand" href="#">Olimpia Automotores</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Vehículos
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                              <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                              <a class="dropdown-item" href="vehiculos.html">De colección</a>
-                            </div>
-                        </li> 
-                         <li class="nav-item">
-                            <a class="nav-link" href="postVenta.html">Post-Venta</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="automoviles, autos, 0km, usados, coche, L-gante">
+  <meta name="description"
+    content="Somos una agencia dedicada a la compra y venta de automóviles. Buenos precios y una atención post venta inigualable.">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="scss/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <title>Quiénes somos</title>
+</head>
+
+<body>
+  <div class="container-fluid width100">
+    <div id="logo">
+      <a href="index.html"><img src="imagenes/logosinfondo.png" width="300"
+          class="logo wow animate__animated animate__backInRight" /></a>
+    </div>
+    <div class="menu">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">Olimpia Automotores</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Vehículos
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="vehiculos.html">0 Km</a>
+                <a class="dropdown-item" href="vehiculos.html">Usados</a>
+                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+              </div>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="postVenta.html">Post-Venta</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-		<head>
-			<h1 class="titulo">Queremos que nos conozcas</h1>
+      </nav>
+    </div>
+
+    <head>
+      <h1 class="titulo">Queremos que nos conózcas!!!</h1>
     </head>
-		<div>
-      <div class="destacados margin">
+    <div class="staff">
+      <h2>
+        Nuestro staff
+      </h2>
+      <div class="row destacados margin">
         <div class="col-12 col-md-12 texto row">
           <div class="card" style="width: 18rem;">
-            <img src="imagenes/scaloni.png" class="card-img-top" alt="scaloni">
+            <img src="imagenes/scaloni.png" loading="lazy" class="card-img-top" alt="scaloni">
             <div class="card-body">
               <p class="card-text bold">Lionel Scaloni.</p>
-              <p class="card-text textoBlack">Socio-Gerente de marketing.</p>
+              <p class="card-text textoBlack">Gerente de marketing.</p>
               <p class="card-text textoBlack">lioscaloni@gmail.com</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="imagenes/messi.png" class="card-img-top" alt="messi">
+            <img src="imagenes/messi.png" loading="lazy" class="card-img-top" alt="messi">
             <div class="card-body">
               <p class="card-text bold">Lionel Messi.</p>
-              <p class="card-text textoBlack">Socio-Gerente de ventas.</p>
+              <p class="card-text textoBlack">Gerente de ventas.</p>
               <p class="card-text textoBlack">liomessi@gmail.com</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="imagenes/otamendi.jpg" class="card-img-top" alt="otamendi">
+            <img src="imagenes/otamendi.jpg" loading="lazy" class="card-img-top" alt="otamendi">
             <div class="card-body">
               <p class="card-text bold">Nicolás Otamendi.</p>
               <p class="card-text textoBlack">Community manager.</p>
@@ -83,7 +91,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="imagenes/lautaro.jpg" class="card-img-top" alt="lautaro">
+            <img src="imagenes/lautaro.jpg" loading="lazy" class="card-img-top" alt="lautaro">
             <div class="card-body">
               <p class="card-text bold">Lautaro Martinez.</p>
               <p class="card-text textoBlack">Vendedor.</p>
@@ -92,49 +100,129 @@
           </div>
         </div>
       </div>
-    </div>
-		<div class="suscribe">
-            <span class="bold2">Reciba nuestras novedades</span><div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le interesen.</div>
-            <form class="texto">
-                <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail3">
-                    </div>
-                </div>
-                <fieldset class="form-group row">
-                  <legend class="col-form-label col-sm-2 float-sm-left pt-0">NEWSLETTER</legend>
-                  <div class="col-sm-10">
-                    <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Deseo que me envíen las ofertas destacadas.</label>
-                    </div>
-                </fieldset>
-                <div class="form-group row width100">
-                    <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </div>
-                </div> 
-            </form>
-        </div>
-        <div class="row g-0 footer">
-            <div class="col-6 col-md-6">
-                <div class="textoWhite texto">
-                    <div>Olimpia Automotores.</div>
-                    <div>Todos los derechos reservados.</div>
-                </div>
-            </div> 
-            <div class="col-6 col-md-6 img">
-                <img src="imagenes/redessinfondo.png" width="150">
+      <div class="destacados margin">
+        <div class="col-12 col-md-12 texto row">
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/dimaria.jpg" loading="lazy" class="card-img-top" alt="dimaria">
+            <div class="card-body">
+              <p class="card-text bold">Ángel Di Maria.</p>
+              <p class="card-text textoBlack">Contabilidad.</p>
+              <p class="card-text textoBlack">angeldimaria@gmail.com</p>
             </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/dibu.jpg" loading="lazy" class="card-img-top" alt="dibu">
+            <div class="card-body">
+              <p class="card-text bold">Emiliano Martinez.</p>
+              <p class="card-text textoBlack">Seguridad.</p>
+              <p class="card-text textoBlack">emilianomartinez@gmail.com</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/depaul.jpg" loading="lazy" class="card-img-top" alt="depaul">
+            <div class="card-body">
+              <p class="card-text bold">Rodrigo De Paul.</p>
+              <p class="card-text textoBlack">RR.HH.</p>
+              <p class="card-text textoBlack">rodridepaul@gmail.com</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/paredes.jpg" loading="lazy" class="card-img-top" alt="paredes">
+            <div class="card-body">
+              <p class="card-text bold">Leandro Paredes.</p>
+              <p class="card-text textoBlack">Legales.</p>
+              <p class="card-text textoBlack">Leandroparedes@gmail.com</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <script src="js/wow.min.js"></script>
-    <script>
+    <h2 class="d-none d-lg-block">
+      El local
+    </h2>
+    <div class="row margin">
+      <div id="carouselExampleControls" class="carousel slide width40 d-none d-lg-block" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="imagenes/local.jpeg" loading="lazy" class="d-block w-100" alt="local">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/local2.jpeg" loading="lazy" class="d-block w-100" alt="local2">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/local3.jpg" loading="lazy" class="d-block w-100" alt="local3">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 texto">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3543.020124051528!2d-55.90220018543495!3d-27.37508691923852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be485f556b25%3A0xf37e761f88c357d0!2sSgto.%20Barrufaldi%202241%2C%20Posadas%2C%20Misiones!5e0!3m2!1ses!2sar!4v1635727520638!5m2!1ses!2sar"
+          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="textoBlack">
+          <div>Dirección: Barrufaldi 2241.</div>
+          <div>Posadas-Misiones.</div>
+          <div>Teléfono: 3764-270342</div>
+        </div>
+      </div>
+    </div>
+    <div class="suscribe width100">
+      <span class="bold2">Reciba nuestras novedades</span>
+      <div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le
+        interesen.</div>
+      <form class="texto" method="GET" action="volverinicio.html">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
+        </div>
+        <fieldset class="form-group row">
+          <div class="col-sm-12">
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Deseo recibir ofertas destacadas.</label>
+            </div>
+        </fieldset>
+        <div class="form-group row width100">
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="row g-0 footer">
+      <div class="col-md-5 col-md-5 d-none d-lg-block">
+        <div class="texto">
+          <div>Olimpia Automotores.</div>
+          <div>Todos los derechos reservados.</div>
+        </div>
+      </div>
+      <div class="col-5 col-md-2 row">
+        <a href="https://wa.me/541141669827"><img src="imagenes/wp.png" width="30" height="30" alt="whatsapp"></a>
+        <a href="https://www.facebook.com/OlimpiaAutomotores"><img src="imagenes/fb.png" width="30" height="30"
+            alt="facebook"></a>
+        <a href="https://www.instagram.com/olimpia_automotores/"><img src="imagenes/insta.png" width="30" height="30"
+            alt="instagram"></a>
+      </div>
+      <div class="col-5 col-md-5 d-none d-lg-block">
+        <div class="texto">
+          <div>Dirección: Barrufaldi 2228.</div>
+          <div>Posadas-Misiones.</div>
+          <div>Teléfono: 3764-270342</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="js/wow.min.js"></script>
+  <script>
     new WOW().init();
-    </script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-  </body>
-</html>			
-				
+  </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
